--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import "tailwindcss";
+
+html {
+  font-family: "Roboto", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: 100;
+}
+
+/* SweetAlert2 custom popup styling */
+.swal2-popup-custom {
+  font-family: sans-serif;
+  border-radius: 0.5rem;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+}
+
+.swal2-title-custom {
+  color: #1f2937; /* text-gray-800 */
+  font-size: 1.5rem; /* text-2xl */
+  font-weight: 600; /* font-semibold */
+}
+
+.swal2-html-container-custom {
+  color: #4b5563; /* text-gray-600 */
+  font-size: 1rem; /* text-base */
+}
+
+.swal2-actions {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.swal2-confirm-button-custom,
+.swal2-cancel-button-custom {
+  flex: none;
+  width: auto;
+  min-width: 120px;
+  border: none;
+  border-radius: 0.375rem; /* rounded-md */
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem; /* text-base */
+  font-weight: 500; /* font-medium */
+  transition: all 0.3s;
+}
+
+.swal2-confirm-button-custom {
+  background-color: #dc2626; /* bg-red-600 */
+  color: white;
+}
+
+.swal2-confirm-button-custom:hover {
+  background-color: #b91c1c; /* bg-red-700 */
+  transform: translateY(-4px);
+}
+
+.swal2-cancel-button-custom {
+  background-color: #4b5563; /* bg-gray-600 */
+  color: white;
+}
+
+.swal2-cancel-button-custom:hover {
+  background-color: #374151; /* bg-gray-700 */
+  transform: translateY(-4px);
+}
+
+.swal2-icon.swal2-icon-show {
+  border: none;
+}
+
+/* todo: Si se trabaja con permisos */
+/* 
+const routes: Routes = [
+  {
+    path: 'users',
+    component: UsersComponent,
+    canActivate: [() => permissionGuard({ action: 'read', object: 'users' })()]
+  },
+  {
+    path: 'roles',
+    component: RolesComponent,
+    canActivate: [() => anyPermissionGuard([
+      { action: 'read', object: 'roles' },
+      { action: 'read', object: 'permissions' }
+    ])()]
+  }
+]; */
